updated code with new features

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
 	<!-- favicons
 	================================================== -->
-	<link rel="icon" type="image/png" href="favicon.png">
+	<!-- <link rel="icon" type="image/png" href="favicon1.png"> -->
+	<link rel="icon" type="image/x-icon" href="favicon1.png">
 
 </head>
 
@@ -41,7 +42,7 @@
 	<header>
 		<div class="row">
 
-			<!-- <div class="top-bar">
+			<div class="top-bar">
 				<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 				<div class="logo">
@@ -54,13 +55,11 @@
 						<li><a class="smoothscroll" href="#about" title="">About</a></li>
 						<li><a class="smoothscroll" href="#resume" title="">Resume</a></li>
 						<li><a class="smoothscroll" href="#portfolio" title="">Portfolio</a></li>
-						<li><a class="smoothscroll" href="#services" title="">Services</a></li>
+						<li><a class="smoothscroll" href="#services" title="">Certificates</a></li>
 						<li><a class="smoothscroll" href="#contact" title="">Contact</a></li>
-						<li><a href="styles.html" title="">Style Demo</a></li>
 					</ul>
 				</nav>
-			</div> /top-bar -->
-
+			</div> 
 		</div> <!-- /row -->
 	</header> <!-- /header -->
 
@@ -138,7 +137,7 @@
 					</li>
 					<li>
 						<strong>Website:</strong>
-						<span>www.kardswebsite.com</span>
+						<span>https://mr-daksh.github.io/Portfolio</span>
 					</li>
 					<li>
 						<strong>Email:</strong>
@@ -171,7 +170,7 @@
 						<strong>SQL</strong>
 					</li>
 					<li>
-						<div class="progress percent60"><span>55%</span></div>
+						<div class="progress percent55"><span>55%</span></div>
 						<strong>C, Python</strong>
 					</li>
 					<li>
@@ -183,12 +182,12 @@
 						<strong>jquery, Bootstrap, figma</strong>
 					</li>
 					<li>
-						<div class="progress percent75"><span>70%</span></div>
+						<div class="progress percent70"><span>70%</span></div>
 						<strong>Wordpress</strong>
 					</li>
 					<li>
-						<div class="progress percent70"><span>65%</span></div>
-						<strong>API, Git, Node, Express</strong>
+						<div class="progress percent65"><span>65%</span></div>
+						<strong>API, Node, Express</strong>
 					</li>
 
 				</ul> <!-- /skill-bars -->
@@ -200,7 +199,7 @@
 		<div class="row button-section">
 			<div class="col-twelve">
 				<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-				<a download="Daksh Sahu.pdf" href="images/Daksh Sahu.pdf" target="new" title="Download CV" class="button button-primary">Download CV</a>
+				<a download="Daksh Sahu.pdf" href="images/Daksh Sahu Dev.pdf" target="new" title="Download CV" class="button button-primary">Download CV</a>
 			</div>
 		</div>
 
@@ -243,13 +242,13 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Technical Lead StartUp</h3>
+							<h3>Technical Lead, StartUp</h3>
 							<p>October 2021 - January 2022</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>CarryUp & YellowDr</h4>
-							<p>As the Technical Lead for Sarthi, I designed and implemented a seamless truck booking platform, overseeing features like varied truck sizes and a dedicated marketplace and also designing of the Android App UI on Figma. At Yellow Doctor, I led the development of an accessible online appointment booking platform. I ensured a seamless and user-friendly experience in both ventures.</p>
+							<h4>Sarthi & YellowDr.</h4>
+							<p>As the Technical Lead for Sarthi, I designed and implemented a seamless truck booking platform, overseeing features like varied truck sizes and a dedicated marketplace. At Yellow Doctor, I led the development of an accessible online appointment booking platform. I ensured a seamless and user-friendly experience in both ventures.</p>
 						</div>
 
 					</div> <!-- /timeline-block -->
@@ -261,7 +260,7 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Website Developer Freelancing</h3>
+							<h3>Website Developer, Freelancing</h3>
 							<p>June 2022 - August 2022</p>
 						</div>
 
@@ -322,7 +321,7 @@
 
 						<div class="timeline-content">
 							<h4>Galgotias College of Engineering and Technology, Noida<p class="margin-bottom-neg-10 margin-bottom-0">CGPA: 7.6</p></h4>
-							<p>Affiliated to: <b>ICSE Board</b> <br><B>Relevant Coursework: </B> Data Structure & Algorithms, Database Management System, SQL, Operating System, Object Oriented Programming</p>
+							<p>Affiliated to: <b>AKTU</b> <br><B>Relevant Coursework: </B> Data Structure & Algorithms(DSA), Database Management System(DBMS), SQL, Operating System(OS), Object Oriented Programming(OOPs)</p>
 						</div>
 
 					</div> <!-- /timeline-block -->
@@ -340,7 +339,7 @@
 
 						<div class="timeline-content">
 							<h4>Christ the King College, Jhansi<p class="margin-bottom-neg-10 margin-bottom-0">Percent: 85.25%</p></h4>
-							<p>Affiliated to: <b>ISC Board</b> <br><B>Relevant Coursework: </B>Physics, Chemistry, Mathematics, Computer Applications</p>
+							<p>Affiliated to: <b>ISC Board</b> <br><B>Relevant Coursework: </B>Computer Applications, Physics, Chemistry, Mathematics</p>
 						</div>
 
 					</div> <!-- /timeline-block -->
@@ -358,7 +357,7 @@
 
 						<div class="timeline-content">
 							<h4>Christ the King College, Jhansi<p class="margin-bottom-neg-10 margin-bottom-0">Percent: 84.8%</p></h4>
-							<p>Affiliated to: <b>ICSE Board</b> <br><B>Relevant Coursework: </B>Science, Social Studies, Mathematics, Computer Applications</p>
+							<p>Affiliated to: <b>ICSE Board</b> <br><B>Relevant Coursework: </B>Computer Applications, Science, Social Studies, Mathematics</p>
 						</div>
 
 					</div> <!-- /timeline-block -->
@@ -399,7 +398,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/m1.jpg" alt="Liberty">
+							<img src="images/portfolio/m12.jpg" alt="Liberty">
 							<a href="#modal-01" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
@@ -415,7 +414,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/m22.jpg" alt="Shutterbug">
+							<img src="images/portfolio/m23.jpg" alt="Shutterbug">
 							<a href="#modal-02" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
@@ -498,18 +497,18 @@
 					<div id="modal-01" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/portfolio/modals/m (1).jpg" alt="" />
+							<img src="images/portfolio/modals/m1.jpg" alt="" />
 						</div>
 
 						<div class="description-box">
 							<h4>Typing Geeks</h4>
-							<p>A React-based typing speed testing website with typing games, varying time frames, and comprehensive typing documentation.</p>
+							<p>Welcome to Typing Geeks—React-powered typing site with games, diverse time frames, and comprehensive documentation. Elevate your typing skills with speed tests and engaging games.</p>
 
 							<div class="categories">React</div>
 						</div>
 
 						<div class="link-box">
-							<a href="https://github.com/Mr-Daksh/Typing-Geeks-using-REACT">Details</a>
+							<a href="https://github.com/Mr-Daksh/Typing-Geeks-using-REACT" target="new">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
 
@@ -518,18 +517,18 @@
 					<div id="modal-02" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/portfolio/modals/m (2).jpg" alt="" />
+							<img src="images/portfolio/modals/m2.jpg" alt="" />
 						</div>
 
 						<div class="description-box">
-							<h4>Sarthi Truck Booking</h4>
-							<p>Welcome to Sarthi, your ultimate truck booking solution. Whether you're moving homes, transporting goods, or managing commercial deliveries, Sarthi provides a seamless platform to book trucks of varying sizes and categories tailored to your specific requirements.</p>
+							<h4>Sarthi - Truck Booking</h4>
+							<p>Streamlining Truck Booking: Instant bookings, diverse trucks, unique marketplace. Ideal for B2B and B2C, responsive design, Firebase-powered. Explore hassle-free transportation in the live demo.</p>
 
 							<div class="categories">Web Development</div>
 						</div>
 
 						<div class="link-box">
-							<a href="https://github.com/Mr-Daksh/Sarthi-Truck-Booking">Details</a>
+							<a href="https://mr-daksh.github.io/Sarthi-Truck-Booking/" target="new">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
 
@@ -543,13 +542,13 @@
 
 						<div class="description-box">
 							<h4>Digital Agency</h4>
-							<p>A Digital Agency to run different Businesses using WordPress.</p>
+							<p>A showcase of WordPress's power with captivating design, seamless navigation, services, testimonials, and team info. Built with Elementor, Astra theme, and WP Forms for user interaction.</p>
 
 							<div class="categories">Wordpress</div>
 						</div>
 
 						<div class="link-box">
-							<a href="https://github.com/Mr-Daksh/Digital-Agency-using-WORDPRESS">Details</a>
+							<a href="https://github.com/Mr-Daksh/Digital-Agency-using-WORDPRESS" target="new">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
 
@@ -563,13 +562,13 @@
 
 						<div class="description-box">
 							<h4>Global Tech Masters</h4>
-							<p>A collaborative PHP project showcasing a platform designed for seamless online course sales and transactions.</p>
+							<p>Explore the dynamic Course Selling Platform using PHP—crafted through seamless integration, user authentication, and efficient collaboration for a robust online course marketplace.</p>
 
 							<div class="categories">PHP</div>
 						</div>
 
 						<div class="link-box">
-							<a href="https://github.com/Mr-Daksh/Course-Selling-Platform-using-PHP">Details</a>
+							<a href="https://github.com/Mr-Daksh/Course-Selling-Platform-using-PHP" target="new">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
 
@@ -583,13 +582,13 @@
 
 						<div class="description-box">
 							<h4>Yellow Dr.</h4>
-							<p>Simplify appointment booking and lab test scheduling. Your streamlined healthcare solution.</p>
+							<p>Simplifying online doctor appointments and lab test scheduling for personalized healthcare. Stay informed with the Yellow Doctor Feed. Built with modern web tech and Firebase reliability.</p>
 
 							<div class="categories">Web Development</div>
 						</div>
 
 						<div class="link-box">
-							<a href="https://github.com/Mr-Daksh/Yellow-Dr">Details</a>
+							<a href="https://mr-daksh.github.io/Yellow-Dr/" target="new">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
 
@@ -603,13 +602,13 @@
 
 						<div class="description-box">
 							<h4>Carry Up</h4>
-							<p>Designing the UI of the carryup mobile app using figma, and all the differnet page sfrom log in to finalizing the vehicle</p>
+							<p>Carryup Mobile App UI Design: Transformed truck booking with user-friendly interfaces from login to finalizing the vehicle. Ideal for B2B and B2C, featuring responsive design.</p>
 
 							<div class="categories">Figma</div>
 						</div>
 
 						<div class="link-box">
-							<a href="https://www.figma.com/file/qQv65uK3WZhHHzLtRy7ANG?type=design">Details</a>
+							<a href="https://www.figma.com/file/qQv65uK3WZhHHzLtRy7ANG?type=design" target="new">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
 
@@ -764,7 +763,7 @@
 						</div>
 
 						<h3 class="stat-count">
-							1500
+							17
 						</h3>
 
 						<h5 class="stat-title">
@@ -776,27 +775,11 @@
 					<div class="bgrid stat">
 
 						<div class="icon-part">
-							<i class="icon-users"></i>
-						</div>
-
-						<h3 class="stat-count">
-							900
-						</h3>
-
-						<h5 class="stat-title">
-							Happy Clients
-						</h5>
-
-					</div> <!-- /stat -->
-
-					<div class="bgrid stat">
-
-						<div class="icon-part">
 							<i class="icon-badge"></i>
 						</div>
 
 						<h3 class="stat-count">
-							200
+							33
 						</h3>
 
 						<h5 class="stat-title">
@@ -812,7 +795,7 @@
 						</div>
 
 						<h3 class="stat-count">
-							120
+							51
 						</h3>
 
 						<h5 class="stat-title">
@@ -820,6 +803,23 @@
 						</h5>
 
 					</div> <!-- /stat -->
+
+					
+					<div class="bgrid stat">
+
+						<div class="icon-part">
+							<i class="icon-users"></i>
+						</div>
+
+						<h3 class="stat-count">
+							900
+						</h3>
+
+						<h5 class="stat-title">
+							Team Members Collaborated
+						</h5>
+
+					</div>
 
 					<div class="bgrid stat">
 
@@ -890,9 +890,8 @@
 				<h5>Where to find me</h5>
 
 				<p>
-					First Floor, 175, E Block<br>
-					Alpha 1, Noida<br>
-					201310 INDIA
+					175, E Block, Alpha 1<br>
+					Noida, INDIA
 				</p>
 
 			</div>
