updated Instagram link

--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
 					<li><a href="https://www.linkedin.com/in/daksh-sahu-608b19213/" target="new"><i class="fa fa-linkedin"></i></a></li>
 					<li><a href="https://github.com/Mr-Daksh" target="new"><i class="fa fa-github"></i></a></li>
 					<li><a href="mailto:dakshsahu24@gmail.com" target="new"><i class="fa fa-solid fa-envelope"></i></a></li>
-					<li><a href="https://instagram.com/mr.daksh_?igshid=M2RkZGJiMzhjOQ==" target="new"><i class="fa fa-instagram"></i></a></li>
+					<li><a href="https://www.instagram.com/oyee.daksh_/" target="new"><i class="fa fa-instagram"></i></a></li>
 
 				</ul>
 
